# poetry-stabs-package-sample

./: .pre-commit-config.yaml  README.md  bad_file.py  makefile  pyproject.toml  respected_project_mdmo.md
.github/setup/: action.yml
.github/workflows/: lints.yml  release-testpypi-prod.yml  release-testpypi-trigger-branch.yml  release-testpypi-trigger-release.yml  release-testpypi.yml
poetry_stabs_package_sample/: __init__.py  sample.py  sample2.py
poetry_stabs_package_sample/types/: sampleTypes.py
poetry_stabs_package_sample/utils/: utilsample.py
precommit/hooks/: pre-commit
tests/: test_emotional.py  test_sample.py
