[tool.poetry]
name = "poetry-stabs-package-sample"
version = "0.1.3"
description = "sample package for poetry-stabs"
authors = ["0num4 <r.oonuma@matsuri-tech.com>"]
homepage = "https://github.com/0num4"
repository = "https://github.com/0num4/poetry-stabs-package-sample"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-dynamic-versioning = "^1.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
black = "^24.4.2"
mypy = "^1.10.0"
pydantic = "^2.7.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
setup = ""

[tool.mypy]
plugins = "pydantic.mypy"
python_version = "3.12"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
    "E", # Error
    "W", # Warning
    "I", # isort
    "C", # complexity
]
ignore = ["E501"]
